# Neo9527-unified-finance-skill

./: .gitignore  AGENT-ARCHITECTURE.md  COMPLETENESS-ASSESSMENT.md  EVALUATION-REPORT.md  MANIFEST.in  README.md  RELEASE_NOTES.md  SKILL.md  SKILLS-EVALUATION.md  SYSTEM_SUMMARY.md  TAOTIE-PLAN.md  finance.py  generate_report.py  pyproject.toml  requirements.txt  setup.py  test-prompts.json  test_eth.py  test_whale.py  upload.py
agents/: openai.yaml
api/: __init__.py  server.py
config/: alerts.json  portfolio.json
docs/: APPLE_STYLE_OPTIMIZATION.md  ARCHITECTURE.md  MODULE_INTEGRATION.md  MULTI_TIMEFRAME_V5_SUMMARY.md  OPTIMIZATION_PRIORITY_PLAN.md  PHASE-13-ROADMAP.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PROFESSIONAL_REPORT_SUMMARY.md  PROJECT_SUMMARY.md  STATUS-REPORT.md  TECHNICAL_CONCLUSION_OPTIMIZATION.md  V5_PROGRESS.md  V5_UPGRADE_ROADMAP.md
neo9527_finance_skill/: __init__.py
references/: CURRENT-STATUS.md  FINAL-INTEGRATION-REPORT.md  FINAL-REPORT.md  FINAL-SUMMARY.md  FIXES.md  GAP-ANALYSIS.md  LOCAL-SKILLS-HISTORY.md  MATRIX-UPGRADE-PLAN.md  PHASE1-COMPLETE.md  PHASE2-COMPLETE.md  PHASE3-COMPLETE.md  SKILL-INTEGRATION-PLAN.md  SUMMARY-AND-ROADMAP.md  TEST-REPORT.md  integration-log.md  research-framework.md
reports/: AAPL-Complete-Report.txt
scripts/: __init__.py  akshare_chart.py  alert_manager.py  analyzer.py  cache_manager.py  chart_generator.py  check_market_cap.py  check_shares.py  complete_report.py  config.py  data_fetcher.py  data_quality.py  enhanced_data_fetcher.py  final_test.py  finance.py  financial_analyzer.py  multi_source_data.py  pipeline.py  portfolio_manager.py  quality_gate.py  stock_screener.py  symbol_utils.py  test_all.py  valuation_calculator.py  valuation_monitor.py
skills/: __init__.py  base_skill.py
tests/: TEST-REPORT.md  test_api.py  test_data_integrity.py  test_financial_health.py  (+8 more)
(+84 files in other folders)
