[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo9527-finance-skill"
version = "4.4.1"
description = "Lightweight production-ready AI finance skill platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "beautifulboy9527", email = "beautifulboy9527@gmail.com"}
]
keywords = ["finance", "crypto", "stocks", "onchain", "signals", "ai-agent", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/beautifulboy9527/Neo9527-unified-finance-skill"
Documentation = "https://github.com/beautifulboy9527/Neo9527-unified-finance-skill"
Repository = "https://github.com/beautifulboy9527/Neo9527-unified-finance-skill"
Issues = "https://github.com/beautifulboy9527/Neo9527-unified-finance-skill/issues"

[project.scripts]
neo-finance = "scripts.finance:main"

[project.optional-dependencies]
crypto = ["ccxt>=4.3.0", "pandas-ta>=0.3.14b0"]
china = ["akshare>=1.12.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "build>=1.2.1", "twine>=5.0.0", "ruff>=0.4.0"]
all = ["ccxt>=4.3.0", "pandas-ta>=0.3.14b0", "akshare>=1.12.0", "pytest>=8.0.0", "pytest-cov>=5.0.0", "build>=1.2.1", "twine>=5.0.0", "ruff>=0.4.0"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
